--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Christmas Advent Calendar by Düsseldorf-Vegan</title>
+  <title>Adventskalender - Düsseldorf-Vegan</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&family=Prata&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-  <meta name="description" content="Let's celebrate Christmas the vegan way with this magic Advent Calendar">
+  <meta name="description" content="Wir wünschen dir momente voller Frieden, für dich selbst, für die Tiere und unseren Planeten.">
 
-  <meta property="og:title" content="Düsseldorf-Vegan Christmas Advent Calendar">
+  <meta property="og:title" content="Adventskalender - Düsseldorf-Vegan">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="">
+  <meta property="og:url" content="https://adventskalender.duesseldorf-vegan.de/">
   <meta property="og:image" content="https://static.wixstatic.com/media/95fa70_0072a13dabd34008b6840431e06c37ca~mv2.png/v1/fill/w_1250,h_834,al_c/95fa70_0072a13dabd34008b6840431e06c37ca~mv2.png">
   <meta property="og:image:alt" content="Düsseldorf-Vegan">
 
@@ -34,8 +34,8 @@
       </figure>
     </a>
     <div>
-      <h1>Vegan Christmas</h1>
-      <h2>- advent calendar -</h2>
+      <h1>Adventskalender</h1>
+      <h2>- Düsseldorf-Vegan -</h2>
     </div>
     <nav>
       <a href="https://www.duesseldorf-vegan.de/kalender" target="_blank"  aria-label="Calendar">
