data json uncombined

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:title" content="Adventskalender - Düsseldorf-Vegan">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://adventskalender.duesseldorf-vegan.de/">
-  <meta property="og:image" content="https://static.wixstatic.com/media/95fa70_0072a13dabd34008b6840431e06c37ca~mv2.png/v1/fill/w_1250,h_834,al_c/95fa70_0072a13dabd34008b6840431e06c37ca~mv2.png">
+  <meta property="og:image" content="https://adventskalender.duesseldorf-vegan.de/img/socialshare.png">
   <meta property="og:image:alt" content="Düsseldorf-Vegan">
 
   <link rel="icon" href="/favicon.ico" sizes="any">
